# alfred

./: .containerignore  .dockerignore  .env.example  .gitignore  >  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Containerfile  README.md  SECURITY.md  conftest.py  docker-compose.yml  pyproject.toml
.claude/: settings.json  skills
.claude/agents/: schema-reviewer.md  scientist.md
.claude/hooks/: format-before-commit.sh  protect-env.sh  ruff-autoformat.sh  worktree-setup.sh
.claude/rules/: architecture.md  python-conventions.md  research-protocol.md
.devcontainer/: devcontainer.json  docker-compose.yml  post-create.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  cla.yml  claude-review.yml  claude.yml  container-build.yml  dependabot-automerge.yml  python-ci.yml  release-please.yml  voice-smoke.yml
.serena/: project.yml
.serena/memories/: codebase_structure.md  project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion_checklist.md
alfredctl/: __init__.py  launch.py  main.py  runtime.py  smoke.py  staging.py
bus/: CLAUDE.md  Dockerfile  __main__.py  bridge.py
bus/schemas/: events.py
bus/tests/: test_bridge.py
config/: satellites.yaml.example
core/: CLAUDE.md  warmup.py
core/channels/: __main__.py  admin_api.py  request_bus.py  service_credentials.py  spa.py  stream_catalog.py  telemetry_ws.py  voice_models.py  web_server.py
core/conscious/: __main__.py  action_tools.py  context_assembler.py  cost.py  engine.py  identity.py  memory_reader.py  memory_tools.py  session.py
core/identity/: auth_middleware.py  auth_routes.py  credentials.py  schemas.py  ws_auth.py
core/integrations/: apple_calendar.py  apple_health.py  base.py  registry.py  robinhood.py  sanitizer.py  weather.py
core/librarian/: __main__.py  consolidator.py  scheduler.py
core/memory/: context_index.py  embedding_provider.py  ingestor.py  ingestor_main.py  paths.py  reader.py  redis_vector_store.py  schemas.py  scratchpad.md  scratchpad_writer.py  significance.py  sqlite_vec_store.py  vector_store.py
core/notifications/: channels.py  delivery.py  dispatcher.py  dnd.py  drain_action.py  publisher.py  schema.py
core/reflex/: __main__.py  attention.py  attention_seed.yaml  context_reader.py  engine.py  inference.py  memory_reader.py  ollama_client.py  openai_client.py  runner.py  tool_registry.py
core/routing/: domain_router.py  pending.py  risk.py
core/triggers/: __main__.py  engine.py  feature.py  models.py  registry.py  server.py  store.py
core/voice/: audio.py  hf_models.py  speaker_id.py  stt.py  tts.py  tts_backend.py  tts_kokoro.py  tts_registry.py
docs/: PRD.md  admin-api.md  architecture.md  autonomy.md  containerization.md  context-provider.md  evals-runner.md  event-bus.md  notifications.md  process-model.md  sdk.md  secrets.md  trigger-engine.md  voice-satellites.md  voice.md  web-frontend.md  webauthn.md
docs/backlog/: README.md  context-provider.md  evals-runner.md  phase3-review.md  phase4-deferred.md  remaining-work.md  trigger-engine-simplification.md
docs/qa-backlog/: attention-set-reflex-gating.md  audio-context-unlock-before-first-urgent-notification.md  compression-summary-quality-at-cold-migration.md  confidence-decay-after-ignored-suggestion.md  conscious-engine-recalls-reflex-history.md  container-apple-e2e.md  container-persistent-mode-retention.md  container-podman-smoke.md  container-prod-compose-cachyos.md  critical-action-confirmation-flow.md  cron-timezone-change.md  decay-formula-preserves-important-memories.md  dnd-respects-ios-notifications.md  embedding-model-concurrent-load-safety.md  important-notification-text-only-no-audio.md  kokoro-cuda-rtx4090-execution-provider.md  kokoro-hf-hub-first-run-download.md  kokoro-mac-cpu-audio-quality.md  kokoro-voice-parity-across-surfaces.md  librarian-detects-reflex-patterns.md  notification-delivery-backgrounded-ios.md  piper-fallback-backend-selection.md  proactive-notification-timing-and-cooldown.md  reflex-observation-episodic-memory-end-to-end.md  reminder-5s-latency.md  reminder-absolute-local-time.md  routine-indexing-involuntary-recall.md  routine-suggestion-push-notification-ios.md  routine-suggestion-tap-to-respond.md  sensor-triggers-ha-state-changes.md  service-credentials-cross-process-repush.md  service-credentials-first-deploy-replay.md  service-credentials-real-keyring.md  service-credentials-settings-ui-flow.md  service-credentials-tailscale-trusted-network.md  startup-warmup-first-request-latency.md  state-consolidation-alfred-data-dir.md  trigger-sync-pubsub-reconnect-healing.md  triggers-process-restart-pending-reminder.md  urgent-notification-kokoro-cold-load-nonblocking.md  (+20 more)
domains/: CLAUDE.md
domains/home/: home_agent.py
evals/: __init__.py  __main__.py  compare.py  context_fixtures.py  inference.py  loader.py  models.py  pipeline.py  report.py  scorer.py  store.py
evals/conscious/: metrics.py  runner.py
evals/e2e/: demo_good_morning.py
evals/regression/: mock_ollama.py  runner.py
research/daily/: 2026-03-10.md  2026-03-11.md  2026-07-16.md
research/paper/: 00-outline.md
runner/: __init__.py  __main__.py  supervisor.py
scripts/: dev-down.sh  dev-logs.sh  dev-up.sh  smoke-test-triggers.sh  smoke-test.sh
sdk/: CLAUDE.md  pyproject.toml
sdk/alfred_sdk/: __init__.py  client.py  context.py  events.py  feature.py  mcp.py  telemetry.py
sdk/alfred_sdk/tests/: test_client_features.py  test_feature.py
sdk/tests/: test_client.py  test_client_context.py  test_client_register.py  test_context.py  test_mcp.py  test_schema_compatibility.py  test_telemetry.py
shared/: CLAUDE.md  config.py  fs.py  logging.py  otel.py  redis_streams.py  secrets.py  streams.py  traced.py  tracing.py  type_map.py  types.py  usertime.py
telemetry/: collector.py  schemas.py
tests/: conftest.py
web/: app.js  auth.js  index.html  manifest.json  package-lock.json  package.json  settings.html  settings.js  style.css  tsconfig.app.json  vite.config.ts
(+495 files in other folders)
