[project]
name = "alfred"
version = "0.1.0"
description = "Ambient Multi-Agent System for Smart Environments"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0",
    "redis>=5.0",
    "aiomqtt>=2.0",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp>=1.20",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "croniter>=3.0",
    "pyyaml>=6.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["bus*", "core*", "domains*", "evals*", "runner*", "sdk*", "shared*", "telemetry*", "tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["core", "bus", "domains", "telemetry", "sdk", "tests"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "A", "SIM", "TCH", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["asyncio_mqtt.*", "aiomqtt.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["uvicorn.*"]
ignore_missing_imports = true
