[project]
name = "alfred"
version = "0.1.0"
description = "Ambient Multi-Agent System for Smart Environments"
license = "AGPL-3.0-or-later"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0",
    "redis>=5.0",
    "aiomqtt>=2.0",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp>=1.20",
    "httpx[http2]>=0.27",
    "PyJWT[crypto]>=2.0",
    "python-dotenv>=1.0",
    "croniter>=3.0",
    "pyyaml>=6.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "loguru>=0.7",
    "litellm>=1.0",
    "keyring>=25.0",
    "webauthn>=2.0",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
    "watchfiles>=1.0",
]
integrations = [
    "caldav>=1.3",
    "vobject>=0.9",
    "robin_stocks>=3.0",
]
memory = [
    "sentence-transformers>=3.0",
    "transformers>=4.48",  # Required for Gemma 3 architecture (EmbeddingGemma-300M)
    "sqlite-vec>=0.1",
    "numpy>=1.26",
]
voice = [
    "faster-whisper>=1.0",
    "piper-tts>=1.2",
]
evals = [
    "deepeval>=1.0",
]

[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["bus*", "core*", "domains*", "evals*", "runner*", "sdk*", "shared*", "telemetry*", "tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["core", "bus", "domains", "telemetry", "sdk", "tests"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "A", "SIM", "TCH", "RUF"]

[tool.ruff.lint.per-file-ignores]
"shared/traced.py" = ["UP047"]  # mypy doesn't support PEP 695 generics yet

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = true
# Map sdk/alfred_sdk/* consistently as sdk.alfred_sdk.* (matches runtime imports);
# without this a fresh clone fails with "source file found twice under different names".
explicit_package_bases = true
# sdk tests import alfred_sdk by its installed package name (they run via pytest's
# sys.path insertion), which conflicts with the sdk.alfred_sdk mapping above.
exclude = ["^sdk/tests/", "^sdk/alfred_sdk/tests/"]
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["asyncio_mqtt.*", "aiomqtt.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["uvicorn.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["caldav.*", "robin_stocks.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["litellm.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["sentence_transformers.*", "torch.*", "numpy.*", "aiosqlite.*", "sqlite_vec.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["webauthn.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["faster_whisper.*", "piper.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["deepeval.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["keyring.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jwt.*"
ignore_missing_imports = true
