[project]
name = "alfred-sdk"
version = "0.1.0"
description = "SDK for integrating applications with Project Alfred"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0",
    "redis>=5.0",
]

[project.optional-dependencies]
telemetry = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
